--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "hexo-wordcount",
-  "version": "6.0.1",
+  "name": "hexo-wordcount-sy",
+  "version": "6.0.2",
   "description": "Post Word Count Plugin of Hexo.",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/willin/hexo-wordcount.git"
+    "url": "git+https://github.com/smallyunet/hexo-wordcount.git"
   },
-  "homepage": "https://github.com/willin/hexo-wordcount",
+  "homepage": "https://github.com/smallyunet/hexo-wordcount",
   "keywords": [
     "hexo",
     "wordcount",
     "count"
   ],
   "author": {
-    "name": "Willin Wang",
-    "email": "willin@willin.org",
-    "url": "http://willin.wang"
+    "name": "smallyu",
+    "email": "dev.wangyu@gmail.com",
+    "url": "http://smallyu.net"
   },
   "license": "MIT"
 }
